load resources from jruby-classloader